# fast-resume-plus

./: .codacy.yml  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.github/workflows/: coverage.yml  greptile.yml  notify.yml  quality.yml  security.yml  workflow.yml
src/fast_resume/: __init__.py  cli.py  config.py  index.py  logging_config.py  search.py
src/fast_resume/adapters/: __init__.py  antigravity.py  codex.py  copilot_vscode.py  kiro.py  opencode.py
src/fast_resume/tui/: __init__.py  app.py  filter_bar.py  utils.py
tests/: test_antigravity_adapter.py  test_cli.py  test_codex_adapter.py  test_copilot_vscode_adapter.py  test_integration.py  test_kiro_adapter.py  test_opencode_adapter.py  test_search.py  test_tui.py
